Simplify guest registration Allow one link login for guests
